[gd_scene load_steps=36 format=3 uid="uid://cfr4fywmerau0"]

[ext_resource type="Script" path="res://core_battle/main_battle.gd" id="1_qxja8"]
[ext_resource type="Texture2D" uid="uid://2s2kjgtcgrid" path="res://assets/icons/circle-heart-svgrepo-com.svg" id="2_26se4"]
[ext_resource type="PackedScene" uid="uid://oucnua8amyi3" path="res://core_battle/gui_battle/stats_info.tscn" id="2_h167a"]
[ext_resource type="PackedScene" uid="uid://cueakbdb2j5jq" path="res://core_battle/dices/seis/dice_six.tscn" id="2_ss0ja"]
[ext_resource type="Material" uid="uid://bv6dr534vwcr1" path="res://assets/test_materials/ice.tres" id="3_64qmf"]
[ext_resource type="Texture2D" uid="uid://bvu50dcdkcmhw" path="res://assets/icons/dialpad-circle-svgrepo-com.svg" id="4_63fj0"]
[ext_resource type="Script" path="res://core_battle/gui_battle/result_stage.gd" id="5_dv0co"]
[ext_resource type="Texture2D" uid="uid://dtu3lvnrc861c" path="res://assets/icons/heart-crack-svgrepo-com.svg" id="5_l054e"]
[ext_resource type="Script" path="res://core_battle/gui_battle/end_game_opt.gd" id="6_4ghvo"]
[ext_resource type="Material" uid="uid://b5s7rqy823muv" path="res://assets/custrom_materials/brownleatheer.tres" id="8_n5ruj"]
[ext_resource type="AudioStream" uid="uid://4duc8akwn08r" path="res://assets/sounds/resslts.wav" id="10_c5a44"]
[ext_resource type="PackedScene" uid="uid://clyxdfcrb04nh" path="res://core_battle/tokens/hearts.tscn" id="11_6cxql"]
[ext_resource type="Script" path="res://core_battle/agents/Chaos.gd" id="12_hcp80"]
[ext_resource type="Material" uid="uid://cs8eysbagjtw1" path="res://assets/custrom_materials/aberration_material/aberr_material.tres" id="13_6wqg0"]
[ext_resource type="Shader" path="res://assets/custrom_materials/aberration_material/coloraberr.gdshader" id="14_knhwl"]
[ext_resource type="Material" uid="uid://c5r68watkeubw" path="res://assets/custrom_materials/aberration_material/aberration_number.tres" id="15_x0wxx"]
[ext_resource type="LightmapGIData" uid="uid://ce6f1bn0ww14g" path="res://core_battle/baked_lights.lmbake" id="17_a6ilj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u8dr5"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2vxmh"]
sky_material = SubResource("ProceduralSkyMaterial_u8dr5")

[sub_resource type="Environment" id="Environment_ioefw"]
background_mode = 2
sky = SubResource("Sky_2vxmh")
tonemap_mode = 1
ssr_enabled = true
ssao_horizon = 1.0
ssao_light_affect = 0.22
ssao_ao_channel_affect = 1.0
sdfgi_enabled = true
sdfgi_min_cell_size = 1.6
sdfgi_y_scale = 0
glow_enabled = true
glow_normalized = true
glow_intensity = 0.4
glow_strength = 0.5

[sub_resource type="PlaneMesh" id="PlaneMesh_ehos4"]
lightmap_size_hint = Vector2i(1002, 1002)
material = ExtResource("8_n5ruj")
add_uv2 = true
size = Vector2(200, 200)
subdivide_width = 20
subdivide_depth = 20

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tnnjy"]
rough = true
absorbent = true

[sub_resource type="BoxShape3D" id="BoxShape3D_hteve"]
size = Vector3(100, 2, 100)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_ytt2m"]
plane = Plane(0, 0, 1, 0)

[sub_resource type="BoxMesh" id="BoxMesh_i65j5"]
lightmap_size_hint = Vector2i(206, 306)
material = ExtResource("3_64qmf")
add_uv2 = true
size = Vector3(40, 10, 0.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_cofij"]
size = Vector3(2, 100, 100)

[sub_resource type="BoxMesh" id="BoxMesh_hr5l0"]
lightmap_size_hint = Vector2i(206, 306)
material = ExtResource("3_64qmf")
add_uv2 = true
size = Vector3(0.4, 10, 40)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_c4saa"]
plane = Plane(1, 0, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_xqfte"]
plane = Plane(0, 0, -1, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_6bg8j"]
plane = Plane(-1, 0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_if8js"]
lightmap_size_hint = Vector2i(206, 306)
material = ExtResource("3_64qmf")
add_uv2 = true
size = Vector3(0.4, 10, 40)

[sub_resource type="BoxMesh" id="BoxMesh_wlh88"]

[sub_resource type="SphereMesh" id="SphereMesh_d7whd"]
radius = 1.0
height = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wbqrl"]
render_priority = 0
shader = ExtResource("14_knhwl")
shader_parameter/r_displacement = Vector2(3, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-3, 0)

[sub_resource type="PrismMesh" id="PrismMesh_5in85"]
size = Vector3(0.485, 0.1, 0.335)

[node name="MainBattle" type="Node3D"]
script = ExtResource("1_qxja8")

[node name="Timer" type="Timer" parent="."]

[node name="MainGui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Lebutton" type="MarginContainer" parent="MainGui"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -32.0
offset_right = 85.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MainGui/Lebutton"]
layout_mode = 2

[node name="HB2" type="HBoxContainer" parent="MainGui/Lebutton"]
layout_mode = 2

[node name="Left" type="TextureRect" parent="MainGui/Lebutton/HB2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_26se4")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MainGui/Lebutton/HB2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainGui/Lebutton/HB2/MarginContainer"]
layout_mode = 2

[node name="TypeRoll" type="Label" parent="MainGui/Lebutton/HB2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Defense!"

[node name="HB1" type="HBoxContainer" parent="MainGui/Lebutton/HB2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Who" type="Label" parent="MainGui/Lebutton/HB2/MarginContainer/VBoxContainer/HB1"]
layout_mode = 2
text = "Player"

[node name="Does" type="Label" parent="MainGui/Lebutton/HB2/MarginContainer/VBoxContainer/HB1"]
layout_mode = 2
text = "Defends"

[node name="RollButton" type="Button" parent="MainGui/Lebutton/HB2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Roll!
"

[node name="Right" type="TextureRect" parent="MainGui/Lebutton/HB2"]
layout_mode = 2
texture = ExtResource("2_26se4")
expand_mode = 3

[node name="PlayerData" parent="MainGui" instance=ExtResource("2_h167a")]
layout_mode = 1
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_right = 250.0
offset_bottom = 142.0
grow_vertical = 1

[node name="EnemyData" parent="MainGui" instance=ExtResource("2_h167a")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -250.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 142.0
grow_horizontal = 0
grow_vertical = 1

[node name="ResultStage" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -84.0
offset_right = 228.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_dv0co")

[node name="Panel" type="Panel" parent="ResultStage"]
layout_mode = 2

[node name="InMarginContainer" type="MarginContainer" parent="ResultStage"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ResultStage/InMarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Battle Result"

[node name="Labels" type="HBoxContainer" parent="ResultStage/InMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Left" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer/Labels"]
layout_mode = 2
text = "Player"

[node name="LeftScore" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer/Labels"]
layout_mode = 2
text = "0"

[node name="LSymbol" type="TextureRect" parent="ResultStage/InMarginContainer/VBoxContainer/Labels"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_26se4")
expand_mode = 5

[node name="VS" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer/Labels"]
layout_mode = 2
text = "V.S."

[node name="RSymbol" type="TextureRect" parent="ResultStage/InMarginContainer/VBoxContainer/Labels"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_26se4")
expand_mode = 5

[node name="RightScore" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer/Labels"]
layout_mode = 2
text = "0"

[node name="Right" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer/Labels"]
layout_mode = 2
text = "Player"

[node name="Calulated" type="HBoxContainer" parent="ResultStage/InMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Defender" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer/Calulated"]
layout_mode = 2
text = "Total"

[node name="LSymbol" type="TextureRect" parent="ResultStage/InMarginContainer/VBoxContainer/Calulated"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("5_l054e")
expand_mode = 5

[node name="NegativeVal" type="Label" parent="ResultStage/InMarginContainer/VBoxContainer/Calulated"]
layout_mode = 2
text = "0"

[node name="AceptStage" type="Button" parent="ResultStage/InMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Acept"

[node name="EndGameOpt" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -92.0
offset_right = 100.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_4ghvo")

[node name="Panel" type="Panel" parent="EndGameOpt"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EndGameOpt"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="EndGameOpt/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="EndGameOpt/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Victory!"

[node name="Next Enemy" type="Button" parent="EndGameOpt/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next Enemy"

[node name="Main Menu" type="Button" parent="EndGameOpt/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ChaosPanel" type="MarginContainer" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -120.0
offset_right = 96.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("5_dv0co")

[node name="Panel" type="Panel" parent="ChaosPanel"]
layout_mode = 2

[node name="InMarginContainer" type="MarginContainer" parent="ChaosPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ChaosPanel/InMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="ChaosPanel/InMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Aberration Dice"

[node name="Attack" type="HBoxContainer" parent="ChaosPanel/InMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Attack" type="TextureRect" parent="ChaosPanel/InMarginContainer/VBoxContainer/Attack"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("4_63fj0")
expand_mode = 5

[node name="Result" type="Label" parent="ChaosPanel/InMarginContainer/VBoxContainer/Attack"]
layout_mode = 2
text = "6"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.826798, -0.487139, 0.281248, -1.49013e-08, 0.499998, 0.866027, -0.562499, -0.716029, 0.413397, 0, 0, 0)
light_energy = 0.301
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ioefw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.320795, 0.947149, 0, -0.947149, 0.320795, 0, 6.19089, 3.13532)

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ehos4")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_tnnjy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("BoxShape3D_hteve")

[node name="StaticBody3DBack" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3DBack"]
shape = SubResource("WorldBoundaryShape3D_ytt2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3DBack"]
mesh = SubResource("BoxMesh_i65j5")
skeleton = NodePath("../../Separator")

[node name="Separator" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.6, 0, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Separator"]
shape = SubResource("BoxShape3D_cofij")

[node name="StaticBody3DLeft" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3DLeft"]
mesh = SubResource("BoxMesh_hr5l0")
skeleton = NodePath("../../Separator")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3DLeft"]
shape = SubResource("WorldBoundaryShape3D_c4saa")

[node name="StaticBody3DFront" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3DFront"]
shape = SubResource("WorldBoundaryShape3D_xqfte")

[node name="StaticBody3DRight" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3DRight"]
shape = SubResource("WorldBoundaryShape3D_6bg8j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3DRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0)
mesh = SubResource("BoxMesh_if8js")
skeleton = NodePath("../../Separator")

[node name="Player" type="Node3D" parent="."]

[node name="Dices" type="Node3D" parent="Player"]

[node name="D6_1" parent="Player/Dices" instance=ExtResource("2_ss0ja")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 0)

[node name="D6_2" parent="Player/Dices" instance=ExtResource("2_ss0ja")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 2)

[node name="D6_3" parent="Player/Dices" instance=ExtResource("2_ss0ja")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -2)

[node name="Tokens" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.99166)

[node name="Heart" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.52391, 1.68526, -1.39685)

[node name="Heart2" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.88539, 3.27034, 0.97571)

[node name="Heart3" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -2.57378, 1.68526, -1.39685)

[node name="Heart4" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.67148, 1.68526, -0.334511)

[node name="Heart5" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -2.44309, 1.68526, -0.334511)

[node name="Heart11" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.52391, 2.92071, -1.39685)

[node name="Heart12" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.31011, 3.29151, -0.382199)

[node name="Heart13" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -2.57378, 2.92071, -1.39685)

[node name="Heart14" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.67148, 2.92071, -0.334511)

[node name="Heart15" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -2.44309, 2.92071, -0.334511)

[node name="Heart16" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.52391, 2.92071, 1.03954)

[node name="Heart17" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.47907, 2.92071, -0.11522)

[node name="Heart18" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.76282, 3.36297, -2.27575)

[node name="Heart19" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.67148, 2.92071, 2.10188)

[node name="Heart20" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.63213, 3.36297, -1.21341)

[node name="Heart6" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.42042, 1.68526, 0.495017)

[node name="Heart7" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -1.73607, 1.68526, -1.39685)

[node name="Heart8" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -3.48143, 3.47034, -3.74575)

[node name="Heart9" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -1.73607, 1.68526, -1.39685)

[node name="Heart10" parent="Player/Tokens" instance=ExtResource("11_6cxql")]
transform = Transform3D(-0.902292, 0, -0.431125, 0, 1, 0, 0.431125, 0, -0.902292, -2.96718, 2.98643, 3.17797)

[node name="Enemy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="leseis_1" parent="Enemy" instance=ExtResource("2_ss0ja")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 0)
mode = false

[node name="leseis_2" parent="Enemy" instance=ExtResource("2_ss0ja")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 2)
mode = false

[node name="leseis_3" parent="Enemy" instance=ExtResource("2_ss0ja")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -2)
mode = false

[node name="falsedice" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.12435, 9.32724)
visible = false
mesh = SubResource("BoxMesh_wlh88")
skeleton = NodePath("../Chaos")
surface_material_override/0 = ExtResource("13_6wqg0")

[node name="OmniLight3D2" type="OmniLight3D" parent="falsedice"]
light_energy = 8.0
light_negative = true
light_specular = 1.0
omni_range = 2.0

[node name="abersphere" type="MeshInstance3D" parent="falsedice"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.92, 0, 0)
mesh = SubResource("SphereMesh_d7whd")
skeleton = NodePath("../../Chaos")
surface_material_override/0 = SubResource("ShaderMaterial_wbqrl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="falsedice"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.547831, 0.0565863)
mesh = SubResource("PrismMesh_5in85")
surface_material_override/0 = ExtResource("15_x0wxx")

[node name="Chaos" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.12435, 13.5637)
script = ExtResource("12_hcp80")

[node name="AberrationDice" parent="Chaos" instance=ExtResource("2_ss0ja")]
dice_material = ExtResource("13_6wqg0")
dice_numbers_material = ExtResource("15_x0wxx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Chaos/AberrationDice"]
visible = false
mesh = SubResource("SphereMesh_d7whd")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_wbqrl")

[node name="OmniLight3D" type="OmniLight3D" parent="Chaos/AberrationDice"]
light_energy = 8.0
light_negative = true
light_specular = 1.0
omni_range = 2.0

[node name="SoundEff" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 3)
stream = ExtResource("10_c5a44")
max_polyphony = 10

[node name="LightmapGI" type="LightmapGI" parent="."]
quality = 2
light_data = ExtResource("17_a6ilj")
